HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportMoveContext/Source/Main.uv
//! Rejected FFI specimen for hosted exports moving the context bundle parameter.

public record HostedMoveContext {
    public sys: System
}

[[host_export("C")]]
public procedure hostedMoveContext(move context: HostedMoveContext) -> i32 {
    return 0
}

